# napari-imaris-loader

./: .gitignore  README.md  setup.cfg  setup.py  tox.ini
.napari/: DESCRIPTION.md
napari_imaris_loader/: __init__.py  controls.py  h5layer.py  ims.py  reader.py  res_change.py  resolution_change_widget.py
napari_imaris_loader/_tests/: test_reader.py
