[metadata]
name = napari-imaris-loader

author = Alan M Watson
author_email = alan.watson@pitt.edu
url = https://github.com/AlanMWatson/napari-imaris-loader
license = BSD-3-Clause
description = Napari plugin for loading Bitplane imaris files '.ims'
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/AlanMWatson/napari-imaris-loader/issues
    Documentation = https://github.com/AlanMWatson/napari-imaris-loader#README.md
    Source Code = https://github.com/AlanMWatson/napari-imaris-loader
    User Support = https://github.com/AlanMWatson/napari-imaris-loader/issues

[options]
packages = find:
python_requires = >=3.8
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    napari[all]
    napari-plugin-engine>=0.1.4
	imaris-ims-file-reader>=0.1.5
    numpy
	h5py
	dask


[options.entry_points] 
napari.plugin = 
    napari-imaris-loader = napari_imaris_loader
